Refactor backend to use Axum and implement database migrations
- Removed old Gin-based main.go and go.sum files.
- Added new migration.sql for database schema setup.
- Implemented database interaction in Rust using SQLx.
- Created new Axum-based main.rs for handling HTTP requests.
- Introduced models for user management with basic CRUD operations.
- Updated Docker configuration for the new Rust backend.
- Added frontend routing and components for navigation.
- Created a new route component for demonstration.

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,12 +1,9 @@
-FROM golang
+FROM rust:slim-trixie
 
 WORKDIR /app
 
-COPY ./go.mod .
-COPY ./go.sum .
-
-RUN go mod download
-
 COPY . .
 
-CMD [ "go", "run", "main.go" ]
+RUN cargo build
+
+CMD ["cargo","run"]
