Add user management features and refactor database initialization
- Implement user authentication flow, user creation, deletion, and editing.
- Introduce management for procedures and notifications via email.
- Refactor database initialization to use a configuration struct.
- Update Docker configuration for development environment.
- Remove unused user model and service.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,6 +24,7 @@ services:
       - DB_PASSWORD=tramits_password
       - DB_NAME=tramits_db
       - DB_PORT=5432
+      - ENVIRONMENT=dev
     ports:
       - 6006:6006
     volumes:
