--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,3 +10,4 @@ tower = "0.5.3"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
 fake = { version = "4.4.0" }
 rand = "0.9.2"
+serde = "1.0.228"
