Implement user management features with user creation endpoint and database integration

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,6 +25,7 @@ services:
       - DB_NAME=tramits_db
       - DB_PORT=5432
       - ENVIRONMENT=dev
+      - RUST_LOG=TRACE
     ports:
       - 6006:6006
     volumes:
