--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,3 +11,6 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
 fake = { version = "4.4.0" }
 rand = "0.9.2"
 serde = "1.0.228"
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
+serde_json = "1.0.149"
