feat: add sidebar and sheet components with utility functions
- Introduced a new sidebar component with various subcomponents including SidebarContent, SidebarFooter, SidebarGroup, SidebarHeader, and more.
- Implemented responsive behavior for mobile views using a Sheet component for offcanvas functionality.
- Added utility functions for managing sidebar state and keyboard shortcuts.
- Created a skeleton loading component for sidebar menu items.
- Updated router to include login and register paths.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
       - ./frontend/public:/app/public
       - ./frontend/vite.config.ts:/app/vite.config.ts
       - ./frontend/components.json:/app/components.json
+      - ./frontend/index.html:/app/index.html
     command: bun run dev
   
   backend:
