--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2024"
 axum = "0.8.8"
 tokio = { version = "1.49.0", features = ["full"] }
 tower = "0.5.3"
-sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
 fake = { version = "4.4.0" }
 rand = "0.9.2"
 serde = "1.0.228"
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
 serde_json = "1.0.149"
+validator = { version = "0.19", features = ["derive"] }
+validator_derive = "0.20.0"
+argon2 = "0.5.3"
