--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./frontend
       dockerfile: dockerfile
+    environment:
+      - VITE_API_URL=http://localhost:6006
     ports:
       - 5173:5173
     volumes:
@@ -27,8 +29,9 @@ services:
       - DB_PORT=5432
       - ENVIRONMENT=dev
       - RUST_LOG=TRACE
+      - PORT=3030
     ports:
-      - 6006:6006
+      - 3030:3030
     volumes:
       - ./backend/src:/app/src
     command: cargo run
