--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,3 +15,6 @@ tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
 serde_json = "1.0.149"
 argon2 = "0.5.3"
 uuid = {version = "1.21.0", features = ["v4", "serde"]}
+jwt = {version = "0.16.0"}
+hmac = "0.12.1"
+sha2 = "0.10.9"
