--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,7 +6,7 @@ services:
       context: ./frontend
       dockerfile: dockerfile
     environment:
-      - VITE_API_URL=http://localhost:3030
+      - VITE_API_URL=http://localhost:3030/api
     ports:
       - 5173:5173
     volumes:
@@ -31,6 +31,7 @@ services:
       - RUST_LOG=TRACE
       - PORT=3030
       - SPA_URL=http://localhost:5173
+      - JWT_SECRET=jr0DCqNu0sbZlhDZ7HgyFQdRjeKWIVxJ0zAWF9jtFX5nFIQn4p/x4hVQ1M3ZrxPr
     ports:
       - 3030:3030
     volumes:
